fix flex wrap ul li

--- a/src/style/skills.css
+++ b/src/style/skills.css
@@ -32,6 +32,7 @@
   padding: 0;
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .background ul li {
@@ -57,4 +58,10 @@
   display: block;
   height: 30px;
   visibility: hidden;
+}
+
+@media screen and (max-width: 768px) {
+  .background ul li {
+    margin-bottom: 1rem;
+  }
 }
